<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:layout_marginBottom="1dp" android:layout_marginEnd="1dp"
        android:layout_marginLeft="1dp" android:layout_marginRight="1dp" android:layout_marginStart="1dp"
        android:layout_margin="1dp" android:layout_marginTop="1dp">
    <TextView
            android:text="@string/bmi_main_weight_kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.375"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:background="#f4c2c2"
            android:text="@string/bmi_main_count_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="1.0"
            android:onClick="calculateBMI"/>
    <TextView
            android:text="@string/bmi_main_height_cm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.487"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/weight_ET"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.43"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/height_ET" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.548"
            app:layout_constraintHorizontal_bias="0.5"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.30178326"/>
    <TextView
            android:layout_width="93dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="32dp"
            android:id="@+id/result_TV" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.806"/>
    <ImageButton
            android:layout_width="70dp"
            android:background="#00000000"
            android:layout_height="60dp" app:srcCompat="@drawable/ic_action_name"
            android:id="@+id/imageButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.82" app:layout_constraintVertical_bias="0.805"
            android:scaleType="fitEnd" android:onClick="showInfo"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="219dp" app:srcCompat="@drawable/bmi"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"/>
</android.support.constraint.ConstraintLayout>